--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,13 @@
-streamlit
-langchain_core
-langchain_community
-dotenv
-langchain_groq
-langchain_ollama
-faiss-cpu
-Chromadb
-langchain_huggingface
-langchain_chroma
-sentence_transformers
-pypdf
-ipykernel
-bs4
-mysql-connector-python
-SQLAlchemy
-arxiv 
-wikipedia
-validators==0.28.1
-youtube_transcript_api
-ddgs
-duckduckgo-search
-playwright
-lxml
-unstructured
+streamlit==1.26.0
+sqlalchemy==2.0.20
+python-dotenv==1.0.0
+langchain==0.1.148
+langchain-groq==0.0.15
+langchain-community==0.1.50
+langchain-huggingface==0.1.10
+huggingface-hub==0.16.4
+faiss-cpu==1.7.4
+pandas==2.1.0
+numpy==1.26.0
+jinja2==3.1.2
+pysqlite3==0.4.7
