--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,9 @@ streamlit==1.26.0
 sqlalchemy==2.0.20
 python-dotenv==1.0.0
 langchain==0.0.350
-langchain-groq==0.0.15
-langchain-community==0.1.50
-langchain-huggingface==0.1.10
+langchain-community==0.0.258  # compatible with langchain 0.0.350
+langchain-groq==0.3.8         # latest compatible with Python 3.13
 huggingface-hub==0.16.4
-faiss-cpu==1.7.4
 pandas==2.1.0
 numpy==1.26.0
 jinja2==3.1.2
