--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-streamlit==1.26.0
-sqlalchemy==2.0.20
-python-dotenv==1.0.0
-langchain==0.0.350
-langchain-community==0.0.258  # compatible with langchain 0.0.350
-langchain-groq==0.3.8         # latest compatible with Python 3.13
-huggingface-hub==0.16.4
-pandas==2.1.0
-numpy==1.26.0
-jinja2==3.1.2
-pysqlite3==0.4.7
+streamlit
+sqlalchemy
+python-dotenv
+langchain-groq
+langchain-community
